OPN-205: Accessibilty fix that does not break the javascript

--- a/ogc_search/wet/static/aurora-custom.css
+++ b/ogc_search/wet/static/aurora-custom.css
@@ -186,6 +186,7 @@
     border-color: #144500; }
   .aurora-list-group-item-success:visited, .aurora-list-group-item-success:link {
     color: #FFFFFF;
+    text-decoration: none;
   }
 
   .aurora-list-group-item-info {
@@ -200,4 +201,5 @@
     border-color: #145062; }
   .aurora-list-group-item-info:visited, .aurora-list-group-item-info:link {
     color: #FFFFFF;
+    text-decoration: none;
   }
